# ravenna

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
cli/: main.py
docs/: Makefile  Ravenna_Phase1_Plan.docx  conf.py  example.ipynb  make.bat
notebooks/: foo.ipynb
ravenna/: config.py  coordinates.py
ravenna/ingest/: base.py  filesystem.py
ravenna/pyramid/: builder.py
ravenna/render/: colormap.py  norm.py  renderer.py
ravenna/stft/: processor.py
src/ravenna/: __init__.py
tests/: test_ravenna.py
tests/unit/: test_config.py  test_coordinates.py  test_ingester.py  test_norm.py  test_pyramid.py  test_renderer.py  test_smoke.py  test_stft.py
