[tool.poetry]
name = "ravenna"
version = "0.0.9999"
description = "SInteract with high-resolution, long-term acoustic data"
authors = ["Max Czapanskiy"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.37.19"
jupyter = "^1.1.1"
scipy = "^1.15.2"
soundfile = "^0.13.1"
numpy = "^2.2.4"
matplotlib = "^3.10.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
